# turbosight

./: .gitignore  .release-it.json  LICENSE  README.md  lefthook.yml  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml
.lefthook/commit-msg/: conventional-commit.sh
test-app/: next.config.ts  package-lock.json  package.json
test-app/src/app/: client-boundary.tsx  layout.tsx  page.tsx  turbosight-setup.tsx
test-app/src/app/components/: heavy-user-list.tsx  product-grid.tsx  recent-activity.tsx  user-stats.tsx
turbosight-react-overlay/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
turbosight-react-overlay/src/: context.tsx  index.ts  interceptor.ts  next.ts  overlay.tsx  panel.tsx  turbosight.tsx  vitals.ts  wrapper.tsx
turbosight-react-overlay/src/__tests__/: context.test.tsx  interceptor.test.ts  overlay.test.tsx  wrapper.test.tsx
turbosight-swc-plugin/: Cargo.toml
turbosight-swc-plugin/src/: lib.rs
