[package]
name = "turbosight-swc-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
swc_core = { version = "58.0.4", features = ["common", "ecma_ast", "ecma_visit", "ecma_plugin_transform"] }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
swc_core = { version = "58.0.4", features = ["testing"] }
swc_ecma_transforms_testing = "42.0.0"

